# HaloView

./: .gitignore  CLAUDE.md  KICKOFF-PROMPT.md  README.md  checkpoint.bat  vr-quality-debug.md  wakeup.bat
docs/: MASTER-PLAN.md  amd-technology-deep-dive.md  viability-study.md
pc-companion/: CMakeLists.txt  README.md
prototype/: README.md  capture.html  index.html  package-lock.json  package.json  start.bat  vite.config.js
prototype/electron/: main.js  package-lock.json  package.json  preload.js
prototype/electron/lib/: ElectronCaptureClient.js
prototype/electron/renderer/: capture-app.html
prototype/src/: main.js
prototype/src/input/: InputManager.js
prototype/src/scene/: PanelManager.js  WindowPicker.js
prototype/src/signaling/: server.js
prototype/src/streaming/: CaptureClient.js  StreamClient.js
prototype/src/vr/: VRButton.js
quest-app/: CMakeLists.txt  README.md
shared/: README.md
tools/: README.md
tools/scripts/: reload_llm.ps1  unload_llm.ps1
